--- a/views/index.html
+++ b/views/index.html
@@ -11,12 +11,25 @@
         <div class="row">
             <div class="col-md-4">
                 <h1>Express File Upload</h1>
-                <form action="/upload" method="POST" enctype="multipart/form-data">
+                <form action="/canciones" method="POST" enctype="multipart/form-data">
+                    
                     <div class="form-group">
-                        <label for="file">File</label>
-                        <input type="file" name="foto" id="file" class="form-control">
+                        <label for="nombre">Nombre:</label>
+                        <input type="text" name="nombre" id="nombre" class="form-control">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group mb-3">
+                        <label for="artista">Artista</label>
+                        <input type="text" name="artista" id="artista" class="form-control">
+                    </div>
+                    <div class="form-group mb-3">
+                        <label for="album">Album:</label>
+                        <input type="text" name="album" id="album" class="form-control">
+                    </div>
+                    <div class="form-group mb-3">
+                        <label for="cancion">Cancion</label>
+                        <input type="file" name="cancion" id="cancion" class="form-control">
+                    </div>
+                    <div class="form-group mb-3">
                         <button type="submit" class="btn btn-primary mt-4">Subir archivo</button>
                     </div>
                 </form>
